Closed Bug 1571502 Opened 6 years ago Closed 6 years ago

Fix shutdown leaks with Fission enabled

Categories

(Core :: DOM: Core & HTML, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla70
Fission Milestone M4
Tracking Status
firefox70 --- fixed

People

(Reporter: kmag, Assigned: kmag)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

A lot of mochitests fail under Fission because they leak TabGroups in the tab processes they create.

Currently, TabGroups know to break their reference cycles only when the last
window leaves them. For TabGroups which have never had a window join (which
happens under Fission), this means they also never see a window leave, and
therefore never break their reference cycles, and leak.

This patch adds a check to break reference cycles if no windows have joined by
the time a BrowserChild they belong to is destroyed.

Priority: -- → P2
https://hg.mozilla.org/integration/mozilla-inbound/rev/3011b29e256265bb4f5a9f53feb070b834f1922e Bug 1571502: Don't leak TabGroups which have never had windows joined to them. r=nika
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla70
Regressions: 1572050
Pushed by maglione.k@gmail.com: https://hg.mozilla.org/integration/autoland/rev/8c98f638d6cd Follow-up: Remove straggler shutdown leak annotations after rebase.

Nika is on PTO.

Flags: needinfo?(nika) → needinfo?(kmaglione+bmo)
Fission Milestone: --- → M4
Regressions: 1574939

I think the devtools leaks have been fixed.

Flags: needinfo?(kmaglione+bmo)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: